--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -30,6 +30,10 @@ html {
   box-sizing: border-box;
 }
 
+body{
+  overflow: hidden;
+}
+
 // Outline Selector for Text _ REMEMBER TO PUT IN FINAL PROJECT
 // ::selection {
 //   background-color: $medium-green;
