--- a/scss/components/_social.scss
+++ b/scss/components/_social.scss
@@ -1,27 +1,34 @@
-// Start Here With Social
-
-
-// Old
-
 .grid {
   &__social {
     display: flex;
-    justify-content: space-between;
-    align-content: flex-start;
+    position: absolute;
+    top: 52.9rem;
+    left: 62.4rem;
     opacity: 1;
     z-index: 1;
     // animation: splash--in 14.2s 1 forwards 5s ease-out;
     // transition: animation 5s ease-out;
+    margin-top: -1rem;
     font-size: 1.6rem;
 
-    @include respond(phone) {
-      font-size: 1.4rem;
+    @include respond (phone){
+      top: 67rem;
+      left: 17rem;
     }
 
     &--icon {
       a {
         color: $primary-color;
+        text-decoration: none;
       }
+    }
+
+    &--email {
+      padding-right: 8.5rem;
+    }
+
+    &--map {
+      padding-right: 8.5rem;
     }
   }
 }
